<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeretamaApp</string>
    <string name="msg_shown">ctview is:</string>
    <string name="checked">Checked</string>
    <string name="unchecked">Unchecked</string>
    <string name="checkedTextView">checkedTextView</string>
    <string name="chosen">Chosen station: </string>
    <string name="image_description">station logo</string>
    <string-array name="stations">
        <item>Teretama</item>
        <item>Tokyo MX</item>
        <item>MBS</item>
        <item>TV Kanagawa</item>
        <item>Chiba TV</item>
        <item>Fuji TV</item>
        <item>TV Tokyo</item>
        <item>BS11</item>
        <item>BSJ</item>
        <item>BS2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme">App theme</string>
    <string name="add_name">Channel name</string>
    <string name="add_button">Add</string>
    <string name="add_title">Add new channel</string>
    <string name="add_error_duplicate">This channel already exists.</string>
    <string name="add_imagedescription">Channel logo</string>
    <string name="item_removed">Item successfully deleted</string>
    <string name="add_error">Please specify an icon and name.</string>
    <string name="add_specifyImage">Click to select image</string>
    <string name="add_select">Select from url</string>
    <string name="cancel">Cancel</string>
    <string name="add_url">Specify image URL</string>
    <string name="add_url_subtitle">.svg, .png is preferred</string>
    <string name="add_url_invalid">Invalid URL</string>
    <string name="add_error_format">Unsupported image format</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="item_remove">Delete</string>
    <string name="item_edit">Edit</string>
    <string name="edit_title">Edit channel</string>
    <string name="edit_button">Save</string>
    <string name="settings_columns">Columns</string>
    <string name="add">Add</string>
    <string name="anime_add">Add anime</string>
    <string name="add_search">Search</string>
    <string name="settings_title">Preferred title language</string>
    <string name="add_success">Added successfully</string>
    <string name="anime_empty">This channel looks empty. Consider adding something.</string>
    <string name="anime_details">%1$d\n%2$s\n%3$d episodes</string>
    <string name="anime_results_start">Search for something.</string>
    <string name="anime_results_empty">No results found.</string>
    <string name="item_move">Move</string>
    <string name="anime_move_title">Move item to</string>
    <string name="anime_move_message">Successfully moved to %1$s</string>
    <string name="anime_cover">Anime cover</string>
    <string name="sort">Sort</string>
    <string-array name="title_langs">
        <item>English (JoJo\'s Bizarre Adventure)</item>
        <item>Romaji (JoJo no Kimyou na Bouken)</item>
        <item>Native (ジョジョの奇妙な冒険)</item>
    </string-array>
    <string-array name="title_langs_values">
        <item>english</item>
        <item>romaji</item>
        <item>native</item>
    </string-array>
    <string-array name="themes">
        <item>Device default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themes_values">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="sort">
        <item>Default</item>
        <item>Title</item>
        <item>Year</item>
        <item>Title (descending)</item>
        <item>Year (descending)</item>
    </string-array>
</resources>