<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChannelActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/add_title"
        android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
        android:background="?android:attr/statusBarColor"
        android:elevation="?attr/toolbarElevation"
        app:titleTextColor="?attr/colorOnPrimary"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_imageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:minHeight="100dp"
        android:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/mtrl_outlined_stroke_color"
        app:strokeWidth="1dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/add_imageHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/add_specifyImage"
                android:gravity="center"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/add_imagePreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/add_imagedescription"
                android:maxHeight="300dp"
                tools:src="@drawable/tokyo_mx" />


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/add_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/add_select"

        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:ems="10"
        android:hint="@string/add_name"
        android:inputType="textAutoComplete"
        android:textSize="18sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_text" />
</LinearLayout>